--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,20 @@
 body {
   font-family: sans-serif;
 }
+
+.app{
+  margin:auto;
+  padding:10px;
+  width: 500px;
+  height:auto;
+  border:1px solid black;
+  border-radius: 10%;
+  justify-content: center;
+}
+
+.app label{
+  display: inline-block;
+  width: 200px;
+  text-align: right;
+}
+
